# lucid-empire-new

./: .gitattributes  .gitignore  .output.txt  API_REFERENCE.md  BINARY_CONSOLIDATION_REPORT.md  CLONE_AND_SETUP.md  COMPREHENSIVE_CHANGE_REPORT.md  DEPLOYMENT_COMPLETE.md  DOCUMENTATION_INDEX.md  GIT_RECOVERY_GUIDE.sh  HANDOVER_REPORT.md  INSTALLATION.md  JETBRAINS_FINAL_TASK.md  LOCAL_VS_GITHUB_COMPARISON.md  LUCID_FINAL_DEV_PROTOCOL.md  LUCID_REPO_TREE.txt  Lucid Empire Zero-Failure Linux Upgrade.txt  OPERATIONS_MANUAL.md  PHASE_RESTRUCTURING_COMPLETE.md  SETUP_BINARIES_README.md  Strategic Research Plan Generation.txt  TROUBLESHOOTING.md  USAGE_GUIDE.md  WORKFLOW_REPORT.md  audit_and_fix.py  cleanup_large_files.bat  debug_imports.py  lucid_api.py  lucid_commander.py  lucid_launcher.py  lucid_ops_auditor.py  main.py  readme.md  setup-binaries.ps1  setup-binaries.sh  setup_externals.ps1  setup_externals.sh  ss  start_lucid.sh
.githooks/: post-clone  post-clone.ps1
_dev_tools/: .gitkeep
assets/: .gitkeep_placeholder
backend/: .gitkeep  __init__.py  lucid_api.py
camoufox/: .gitignore  .gitkeep_placeholder  LUCID_FINAL_PATCH.py  LUCID_GUI_INTEGRATION_REPORT.txt  LUCID_MODIFIED_FILES.txt  LUCID_REPO_TREE.txt  LUCID_TRANSFORMATION_REPORT.md  LUCID_UI_TASK_PLAN.md  Makefile  build_lucid_core.sh  gui_requirements.txt  install_lucid.sh  lucid_commander.py  lucid_launcher.py  lucid_manager.py  pack_lucid.py  (+6 more)
engine/lucid_browser/pythonlib/: README.md  pyproject.toml
engine/lucid_browser/pythonlib/lucid_browser/: browserforge.yml  locale.py  warnings.py  warnings.yml
(+341 files in other folders)
